correcões register page

--- a/src/pages/admin/admin.html
+++ b/src/pages/admin/admin.html
@@ -27,7 +27,7 @@
              <img clss= logo src="/src/assets/icons/ball.svg" alt="logo">
              <h3 class="title-3">Kenzie Empresas</h3>
             </div>
-            <button class="button-default-2">Logout</button> 
+            <button id="logout" class="button-default-2">Logout</button> 
          </nav>
     </header>
     <main class="">
@@ -52,4 +52,5 @@
     <script type="module" src="/src/pages/admin/admin.js"></script>
 </body>
 </html>
+
 
