--- a/src/pages/register/register.html
+++ b/src/pages/register/register.html
@@ -30,7 +30,7 @@
             </div>
             <img src="/src/assets/icons/Vector.svg" alt="menu" class="show-buttons">
             <div class="buttons-nav flex gap">
-             <button class="button-default-2">Home</button>
+             <button class="button-default-2 goHome">Home</button>
              <button class="button-default-2">Login</button>
             </div>     
          </nav>
@@ -48,11 +48,11 @@
                         <option value="sênior">Sênior</option>
                         <option value="pleno">Pleno</option>
                         <option value="júnior">Junior</option>
-                        <option value="estágio">Junior</option>
+                        <option value="estágio">Estagio</option>
                     </select>
                     <button type="submit" class="button-default" disabled="true">Cadastre-se</button>    
                 </form>
-                <button class="button-default">Retornar</button>
+                <button class="button-default goHome">Retornar</button>
             </div>
         </section>
     </main>
