--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -29,8 +29,8 @@
             </div>
             <img src="/src/assets/icons/Vector.svg" alt="menu" class="show-buttons">
             <div class="buttons-nav flex gap">
-             <button class="button-default-2">Home</button>
-             <button class="button-default-2">Cadastro</button>
+             <button class="button-default-2 goHome">Home</button>
+             <button class="button-default-2 goRegister">Cadastro</button>
             </div>     
          </nav>
     </header>
@@ -45,7 +45,7 @@
                     <button type="submit" class="button-default spinner">Login</button>    
                 </form>
                 <p class="ou">ou</p>
-                <button class="button-default">Cadastre-se</button>
+                <button class="button-default goRegister">Cadastre-se</button>
             </div>
         </section>
     </main>
