--- a/src/scripts/teste.html
+++ b/src/scripts/teste.html
@@ -1,22 +1,18 @@
-<img src="./visualizeInfo.js" alt="">
-
-<button onclick=""></button>
-
-<img src="/src/assets/icons/spinner.svg" alt="">
-<img src="/src/pages/user/userPage.html" alt="">
-
-
-<section>
-    <h3>Realmente deseja deletar o Departamento e demitir seus funcionários?</h3>
-    <button>confirmar</button>
-</section>
-
-<h1>Criar Departamento</h1>
-<form>
-    <input type="text">
-    <input type="text">
-    <select name="" id="">
-        <option value="">Digite nome da Empresa</option>
+<select  name="kind_of_work" required="true" required="true" class="input-default">
+    <option value="">Selecionar modalidade de trabalho</option>
+    <option value="home office">Home office</option>
+    <option value="presencial">Presencial</option>
     </select>
-    <button type="submit">Criar o Departamento</button>
-</form>
+    <select  name="professional_level" required="true" required="true" class="input-default">
+    <option value="">Selecionar nivel</option>
+    <option value="sênior">Sênior</option>
+    <option value="pleno">Pleno</option>
+    <option value="júnior">Junior</option>
+    <option value="estágio">Estagio</option>
+    </select>
+
+
+
+    <option value="">Selecionar modalidade de trabalho</option>
+    <option value="home office">Home office</option>
+    <option value="presencial">Presencial</option>
