--- a/src/pages/admin/admin.html
+++ b/src/pages/admin/admin.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="/src/styles/buttons.css">
     <link rel="stylesheet" href="/src/styles/inputs.css">
     <link rel="stylesheet" href="/src/styles/modal.css">
+    <link rel="stylesheet" href="/src/styles/toast.css">
 
     <link rel="stylesheet" href="/src/pages/admin/admin.css">
 
